Delete Overlap Issue Fixed

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/components/media.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/components/media.scss
@@ -75,7 +75,6 @@
 
     #home-right-bar-container {
         position: relative;
-        top: -48px;
     }
 
     .sticky-header {
